# BobbysBurden-android

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/org/libsdl/app/: SDLActivity.java
scripts/vcpkg_ports/sdl2-mixer/: portfile.cmake  vcpkg.json
scripts/vcpkg_triplets/: arm64-android-noiconv.cmake  x64-android-noiconv.cmake
